# devops-2025

./: .env  docker-compose.yml
client/: Dockerfile  package-lock.json  vite.config.ts
monitoring/: prometheus.yml  prometheus.yml.bak
proxy/: default.conf
server/: Dockerfile  pyproject.toml
server/user_management/: api.py  celery.py  settings.py  urls.py  views.py
